add mode selection

--- a/jupyter/periphery/precharger.ipynb
+++ b/jupyter/periphery/precharger.ipynb
@@ -7,10 +7,11 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "import math\n",
     "import sys\n",
     "sys.path.append('../../python/')  \n",
-    "from periphery import logicGate"
+    "from periphery import logicGate\n",
+    "from periphery import constant\n",
+    "print(constant.INV)"
    ]
   },
   {
