add mode selectionV1.1

--- a/jupyter/periphery/Technology.ipynb
+++ b/jupyter/periphery/Technology.ipynb
@@ -7,9 +7,10 @@
    "outputs": [],
    "source": [
     "class Technology:\n",
-    "    def __init__(self, node_nm=45, roadmap='HP'):\n",
+    "    def __init__(self, node_nm=45, roadmap='HP', transistor_type='conventional'):\n",
     "        self.node_nm = node_nm\n",
     "        self.roadmap = roadmap\n",
+    "        self.transistor_type = transistor_type\n",
     "        self.initialized = False\n",
     "        self.params = {}\n",
     "        self._initialize()\n",
@@ -18,113 +19,121 @@
     "        if self.initialized:\n",
     "            print(\"Warning: Already initialized!\")\n",
     "            return\n",
+    "        if self.transistor_type == 'conventional':\n",
+    "            if self.node_nm == 45 and self.roadmap == 'HP':\n",
+    "                vdd = 1.0\n",
+    "                vth = 0.18\n",
+    "                phyGateLength = 45e-9\n",
+    "                capIdealGate = 4e-10\n",
+    "                capFringe = 5e-10\n",
+    "                capOverlap = capIdealGate * 0.2 if self.node_nm >= 22 else 0.0\n",
     "\n",
-    "        if self.node_nm == 45 and self.roadmap == 'HP':\n",
-    "            vdd = 1.0\n",
-    "            vth = 0.18\n",
-    "            phyGateLength = 45e-9\n",
-    "            capIdealGate = 4e-10\n",
-    "            capFringe = 5e-10\n",
-    "            capOverlap = capIdealGate * 0.2 if self.node_nm >= 22 else 0.0\n",
+    "                # Junction cap model (from BSIM4)\n",
+    "                buildInPotential = 0.9\n",
+    "                cjd = 1e-3\n",
+    "                cjswd = 2.5e-10\n",
+    "                cjswgd = 0.5e-10\n",
+    "                mjd = 0.5\n",
+    "                mjswd = 0.33\n",
+    "                mjswgd = 0.33\n",
+    "                #/* Properties not used so far */\n",
+    "                capPolywire = 0.0;\t#/* TO-DO: we need to find the values */\n",
     "\n",
-    "            # Junction cap model (from BSIM4)\n",
-    "            buildInPotential = 0.9\n",
-    "            cjd = 1e-3\n",
-    "            cjswd = 2.5e-10\n",
-    "            cjswgd = 0.5e-10\n",
-    "            mjd = 0.5\n",
-    "            mjswd = 0.33\n",
-    "            mjswgd = 0.33\n",
+    "                capJunction = cjd / pow(1 + vdd / buildInPotential, mjd)\n",
+    "                capSidewall = cjswd / pow(1 + vdd / buildInPotential, mjswd)\n",
+    "                capDrainToChannel = cjswgd / pow(1 + vdd / buildInPotential, mjswgd)\n",
     "\n",
-    "            capJunction = cjd / pow(1 + vdd / buildInPotential, mjd)\n",
-    "            capSidewall = cjswd / pow(1 + vdd / buildInPotential, mjswd)\n",
-    "            capDrainToChannel = cjswgd / pow(1 + vdd / buildInPotential, mjswgd)\n",
+    "                # Current arrays (μA/μm)\n",
+    "                currentOnNmos = [930e-6 - i * 2e-6 for i in range(0, 101, 10)]      # NMOS on-current\n",
+    "                currentOnPmos = [700e-6 - i * 1.5e-6 for i in range(0, 101, 10)]    # PMOS on-current\n",
+    "                currentOffNmos = [100e-9 + i * 0.5e-9 for i in range(0, 101, 10)]   # NMOS off-current\n",
+    "                currentOffPmos = [80e-9 + i * 0.4e-9 for i in range(0, 101, 10)]    # PMOS off-current\n",
     "\n",
-    "            # Current arrays (μA/μm)\n",
-    "            currentOnNmos = [930e-6 - i * 2e-6 for i in range(0, 101, 10)]      # NMOS on-current\n",
-    "            currentOnPmos = [700e-6 - i * 1.5e-6 for i in range(0, 101, 10)]    # PMOS on-current\n",
-    "            currentOffNmos = [100e-9 + i * 0.5e-9 for i in range(0, 101, 10)]   # NMOS off-current\n",
-    "            currentOffPmos = [80e-9 + i * 0.4e-9 for i in range(0, 101, 10)]    # PMOS off-current\n",
+    "                # Interpolation to full 0-100\n",
+    "                currentOnNmos = self._interpolate_full(currentOnNmos)\n",
+    "                currentOnPmos = self._interpolate_full(currentOnPmos)\n",
+    "                currentOffNmos = self._interpolate_full(currentOffNmos)\n",
+    "                currentOffPmos = self._interpolate_full(currentOffPmos)\n",
     "\n",
-    "            # Interpolation to full 0-100\n",
-    "            currentOnNmos = self._interpolate_full(currentOnNmos)\n",
-    "            currentOnPmos = self._interpolate_full(currentOnPmos)\n",
-    "            currentOffNmos = self._interpolate_full(currentOffNmos)\n",
-    "            currentOffPmos = self._interpolate_full(currentOffPmos)\n",
+    "                self.params = {\n",
+    "                    'vdd': vdd,\n",
+    "                    'vth': vth,\n",
+    "                    'phyGateLength': phyGateLength,\n",
+    "                    'capIdealGate': capIdealGate,\n",
+    "                    'capFringe': capFringe,\n",
+    "                    'capOverlap': capOverlap,\n",
+    "                    'capJunction': capJunction,\n",
+    "                    'capSidewall': capSidewall,\n",
+    "                    'capDrainToChannel': capDrainToChannel,\n",
+    "                    'effectiveResistanceMultiplier': 1.0,  # could be adjusted based on design\n",
+    "                    'current_gmNmos': 1e-3,  # conductance for gm unit is μS/μm\n",
+    "                    'current_gmPmos': 0.8e-3,\n",
+    "                    'currentOnNmos': currentOnNmos,\n",
+    "                    'currentOnPmos': currentOnPmos,\n",
+    "                    'currentOffNmos': currentOffNmos,\n",
+    "                    'currentOffPmos': currentOffPmos,\n",
+    "                    'pnSizeRatio': 2.0,\n",
+    "                    'transistorType': self.transistor_type,   \n",
+    "                    'capPolywire': capPolywire,  \n",
+    "                    'featureSize': self.node_nm * 1e-9       \n",
+    "                }\n",
     "\n",
-    "            self.params = {\n",
-    "                'vdd': vdd,\n",
-    "                'vth': vth,\n",
-    "                'phyGateLength': phyGateLength,\n",
-    "                'capIdealGate': capIdealGate,\n",
-    "                'capFringe': capFringe,\n",
-    "                'capOverlap': capOverlap,\n",
-    "                'capJunction': capJunction,\n",
-    "                'capSidewall': capSidewall,\n",
-    "                'capDrainToChannel': capDrainToChannel,\n",
-    "                'effectiveResistanceMultiplier': 1.0,  # could be adjusted based on design\n",
-    "                'current_gmNmos': 1e-3,  # conductance for gm unit is μS/μm\n",
-    "                'current_gmPmos': 0.8e-3,\n",
-    "                'currentOnNmos': currentOnNmos,\n",
-    "                'currentOnPmos': currentOnPmos,\n",
-    "                'currentOffNmos': currentOffNmos,\n",
-    "                'currentOffPmos': currentOffPmos,\n",
-    "                'pnSizeRatio': 2.0\n",
-    "            }\n",
+    "            elif self.node_nm == 14 and self.roadmap == 'LSTP':\n",
+    "                vdd = 0.8\n",
+    "                vth = 0.45\n",
+    "                phyGateLength = 14e-9\n",
+    "                capIdealGate = 2.5e-10\n",
+    "                capFringe = 3e-10\n",
+    "                capOverlap = 0.0  # don't use overlap cap in finFET nodes\n",
     "\n",
-    "        elif self.node_nm == 14 and self.roadmap == 'LSTP':\n",
-    "            vdd = 0.8\n",
-    "            vth = 0.45\n",
-    "            phyGateLength = 14e-9\n",
-    "            capIdealGate = 2.5e-10\n",
-    "            capFringe = 3e-10\n",
-    "            capOverlap = 0.0  # don't use overlap cap in finFET nodes\n",
+    "                buildInPotential = 0.9\n",
+    "                cjd = 1e-3\n",
+    "                cjswd = 2.5e-10\n",
+    "                cjswgd = 0.5e-10\n",
+    "                mjd = 0.5\n",
+    "                mjswd = 0.33\n",
+    "                mjswgd = 0.33\n",
+    "                #/* Properties not used so far */\n",
+    "                capPolywire = 0.0;\t#/* TO-DO: we need to find the values */\n",
     "\n",
-    "            buildInPotential = 0.9\n",
-    "            cjd = 1e-3\n",
-    "            cjswd = 2.5e-10\n",
-    "            cjswgd = 0.5e-10\n",
-    "            mjd = 0.5\n",
-    "            mjswd = 0.33\n",
-    "            mjswgd = 0.33\n",
+    "                capJunction = cjd / pow(1 + vdd / buildInPotential, mjd)\n",
+    "                capSidewall = cjswd / pow(1 + vdd / buildInPotential, mjswd)\n",
+    "                capDrainToChannel = cjswgd / pow(1 + vdd / buildInPotential, mjswgd)\n",
     "\n",
-    "            capJunction = cjd / pow(1 + vdd / buildInPotential, mjd)\n",
-    "            capSidewall = cjswd / pow(1 + vdd / buildInPotential, mjswd)\n",
-    "            capDrainToChannel = cjswgd / pow(1 + vdd / buildInPotential, mjswgd)\n",
+    "                currentOnNmos = [600e-6 - i * 2e-6 for i in range(0, 101, 10)]\n",
+    "                currentOnPmos = [500e-6 - i * 1.5e-6 for i in range(0, 101, 10)]\n",
+    "                currentOffNmos = [10e-9 + i * 0.1e-9 for i in range(0, 101, 10)]\n",
+    "                currentOffPmos = [8e-9 + i * 0.1e-9 for i in range(0, 101, 10)]\n",
     "\n",
-    "            currentOnNmos = [600e-6 - i * 2e-6 for i in range(0, 101, 10)]\n",
-    "            currentOnPmos = [500e-6 - i * 1.5e-6 for i in range(0, 101, 10)]\n",
-    "            currentOffNmos = [10e-9 + i * 0.1e-9 for i in range(0, 101, 10)]\n",
-    "            currentOffPmos = [8e-9 + i * 0.1e-9 for i in range(0, 101, 10)]\n",
+    "                currentOnNmos = self._interpolate_full(currentOnNmos)\n",
+    "                currentOnPmos = self._interpolate_full(currentOnPmos)\n",
+    "                currentOffNmos = self._interpolate_full(currentOffNmos)\n",
+    "                currentOffPmos = self._interpolate_full(currentOffPmos)\n",
     "\n",
-    "            currentOnNmos = self._interpolate_full(currentOnNmos)\n",
-    "            currentOnPmos = self._interpolate_full(currentOnPmos)\n",
-    "            currentOffNmos = self._interpolate_full(currentOffNmos)\n",
-    "            currentOffPmos = self._interpolate_full(currentOffPmos)\n",
+    "                self.params = {\n",
+    "                    'vdd': vdd,\n",
+    "                    'vth': vth,\n",
+    "                    'phyGateLength': phyGateLength,\n",
+    "                    'capIdealGate': capIdealGate,\n",
+    "                    'capFringe': capFringe,\n",
+    "                    'capOverlap': capOverlap,\n",
+    "                    'capJunction': capJunction,\n",
+    "                    'capSidewall': capSidewall,\n",
+    "                    'capDrainToChannel': capDrainToChannel,\n",
+    "                    'effectiveResistanceMultiplier': 1.2,\n",
+    "                    'current_gmNmos': 2.0e-3,\n",
+    "                    'current_gmPmos': 1.6e-3,\n",
+    "                    'currentOnNmos': currentOnNmos,\n",
+    "                    'currentOnPmos': currentOnPmos,\n",
+    "                    'currentOffNmos': currentOffNmos,\n",
+    "                    'currentOffPmos': currentOffPmos,\n",
+    "                    'capPolywire': capPolywire,  \n",
+    "                    'pnSizeRatio': 2.0\n",
+    "                }\n",
+    "            else:\n",
+    "                raise ValueError(f\"Unsupported node {self.node_nm}nm or roadmap {self.roadmap}\")\n",
     "\n",
-    "            self.params = {\n",
-    "                'vdd': vdd,\n",
-    "                'vth': vth,\n",
-    "                'phyGateLength': phyGateLength,\n",
-    "                'capIdealGate': capIdealGate,\n",
-    "                'capFringe': capFringe,\n",
-    "                'capOverlap': capOverlap,\n",
-    "                'capJunction': capJunction,\n",
-    "                'capSidewall': capSidewall,\n",
-    "                'capDrainToChannel': capDrainToChannel,\n",
-    "                'effectiveResistanceMultiplier': 1.2,\n",
-    "                'current_gmNmos': 2.0e-3,\n",
-    "                'current_gmPmos': 1.6e-3,\n",
-    "                'currentOnNmos': currentOnNmos,\n",
-    "                'currentOnPmos': currentOnPmos,\n",
-    "                'currentOffNmos': currentOffNmos,\n",
-    "                'currentOffPmos': currentOffPmos,\n",
-    "                'pnSizeRatio': 2.0\n",
-    "            }\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unsupported node {self.node_nm}nm or roadmap {self.roadmap}\")\n",
-    "        \n",
-    "        self.initialized = True\n",
+    "            self.initialized = True\n",
     "\n",
     "    def _interpolate_full(self, base):\n",
     "        'gemerate a full 0-100 array from a base array with 10 steps'\n",
