--- a/jupyter/periphery/sramWriteDriver.ipynb
+++ b/jupyter/periphery/sramWriteDriver.ipynb
@@ -39,42 +39,44 @@
     "        self.num_write_cell_per_op = num_write_cell_per_op\n",
     "        self.width_inv_n = constant.MIN_NMOS_SIZE * self.tech['feature_size']\n",
     "        self.width_inv_p = self.tech['pn_size_ratio'] * self.width_inv_n\n",
+    "        self.max_transistor_height = MAX_TRANSISTOR_HEIGHT * self.tech['feature_size']\n",
     "        self.initialized = True\n",
     "\n",
     "    def calculate_area(self, new_height=0, new_width=0, option=\"NONE\"):\n",
-    "        h_inv, w_inv = logicGate.calculate_logicgate_area(gateType = constant.INV, num_Input = 1, width_NMOS = self.width_inv_n, width_PMOS,height_Transistor_Region, tech, height_out_y, width_out_x)\n",
-    "        h_inv, w_inv = logicGate.calculate_logicgate_area(\"INV\", 1, self.width_inv_n, self.width_inv_p, self.tech['feature_size'] * MAX_TRANSISTOR_HEIGHT, self.tech)\n",
+    "        h_inv, w_inv = logicGate.calculate_logicgate_area(gateType = constant.INV, num_Input = 1, width_NMOS = self.width_inv_n, width_PMOS = self.width_inv_p, self.max_transistor_height, tech)\n",
     "        h_unit = h_inv * 3\n",
     "        w_unit = w_inv\n",
     "        if new_width and option == \"NONE\":\n",
     "            num_unit_per_row = int(new_width / w_unit)\n",
     "            num_unit_per_row = min(num_unit_per_row, self.num_col)\n",
-    "            num_row_unit = math.ceil(self.num_col / num_unit_per_row)\n",
+    "            num_row_unit = math.ceil(self.num_col / num_unit_per_row) #in case we don't have enough width to fit all columns\n",
     "            self.width = new_width\n",
     "            self.height = num_row_unit * h_unit\n",
     "        else:\n",
     "            self.width = self.num_col * w_unit\n",
     "            self.height = h_unit\n",
     "        self.area = self.width * self.height\n",
-    "        self.cap_inv_input, self.cap_inv_output = CalculateGateCapacitance(\"INV\", 1, self.width_inv_n, self.width_inv_p, h_inv, self.tech)\n",
+    "        self.cap_inv_input, self.cap_inv_output = logicGate.calculate_logicgate_cap(constant.INV, 1, self.width_inv_n, self.width_inv_p, h_inv, self.tech)\n",
     "\n",
     "    def calculate_latency(self, ramp_input, cap_load, res_load, num_write):\n",
-    "        res_pull_up = CalculateOnResistance(self.width_inv_p, \"PMOS\", self.input_param['temperature'], self.tech)\n",
+    "        #first stage pull-up inv\n",
+    "        res_pull_up = logicGate.calculate_on_resistance(self.width_inv_p, constant.PMOS, self.input_param['temperature'], self.tech)\n",
     "        tr = res_pull_up * (self.cap_inv_output + self.cap_inv_input)\n",
-    "        gm = CalculateTransconductance(self.width_inv_p, \"PMOS\", self.tech)\n",
+    "        gm = logicGate.calculate_transconductance(self.width_inv_p, constant.PMOS, self.tech)\n",
     "        beta = 1 / (res_pull_up * gm)\n",
-    "        delay1 = horowitz(tr, beta, ramp_input)\n",
+    "        delay1 = logicGate.horowitz(tr, beta, ramp_input)\n",
     "\n",
-    "        res_pull_down = CalculateOnResistance(self.width_inv_n, \"NMOS\", self.input_param['temperature'], self.tech)\n",
+    "        #second stage pull-down inv\n",
+    "        res_pull_down = logicGate.calculate_on_resistance(self.width_inv_n, constant.NMOS, self.input_param['temperature'], self.tech)\n",
     "        tr2 = res_pull_down * (cap_load + self.cap_inv_output) + res_load * cap_load / 2\n",
-    "        gm2 = CalculateTransconductance(self.width_inv_n, \"NMOS\", self.tech)\n",
+    "        gm2 = logicGate.calculate_transconductance(self.width_inv_n, constant.NMOS, self.tech)\n",
     "        beta2 = 1 / (res_pull_down * gm2)\n",
-    "        delay2 = horowitz(tr2, beta2, ramp_input)\n",
+    "        delay2 = logicGate.horowitz(tr2, beta2, ramp_input)\n",
     "\n",
     "        self.write_latency = (delay1 + delay2) * num_write\n",
     "\n",
     "    def calculate_power(self, num_write):\n",
-    "        leakage = CalculateGateLeakage(\"INV\", 1, self.width_inv_n, self.width_inv_p, self.input_param['temperature'], self.tech)\n",
+    "        leakage = logicGate.calculate_logicgate_leakage(constant.INV, 1, self.width_inv_n, self.width_inv_p, self.input_param['temperature'], self.tech)\n",
     "        self.leakage_power = leakage * self.tech['vdd'] * 3 * self.num_col\n",
     "        num_active = min(self.num_write_cell_per_op, self.num_col * self.activity_col_write)\n",
     "        self.write_dynamic_energy = (self.cap_inv_input + self.cap_inv_output) * self.tech['vdd']**2 * num_active * num_write\n",
