--- a/jupyter/simulator/memory.ipynb
+++ b/jupyter/simulator/memory.ipynb
@@ -9,7 +9,11 @@
     "import sys\n",
     "sys.path.append('../../python/')  \n",
     "from simulator.memory import *\n",
-    "from interface.load_parameter import *\n"
+    "from interface.load_parameter import *\n",
+    "import math\n",
+    "from periphery import logicGate\n",
+    "from periphery import constant\n",
+    "print(constant.INV)"
    ]
   },
   {
@@ -126,6 +130,71 @@
     "data = torch.randn(1000, 2)\n",
     "shape = 200\n",
     "custom_sample(data, shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SubArray:\n",
+    "    def __init__(self, input_parameter, tech, cell, module_lib):\n",
+    "        self.input_parameter = input_parameter\n",
+    "        self.tech = tech\n",
+    "        self.cell = cell\n",
+    "        self.module_lib = module_lib\n",
+    "        self.initialized = False\n",
+    "        self.read_dynamic_energy_array = 0\n",
+    "        self.write_dynamic_energy_array = 0\n",
+    "\n",
+    "    def initialize(self, num_row, num_col, unit_wire_res, relax_cell_width=False, relax_cell_height=False):\n",
+    "        self.num_row = num_row\n",
+    "        self.num_col = num_col\n",
+    "        self.unit_wire_res = unit_wire_res\n",
+    "\n",
+    "        min_cell_height = self.module_lib.constants.MAX_TRANSISTOR_HEIGHT\n",
+    "        min_cell_width = (self.module_lib.constants.MIN_GAP_BET_GATE_POLY + self.module_lib.constants.POLY_WIDTH) * 2\n",
+    "\n",
+    "        if self.cell.mem_cell_type == 'SRAM':\n",
+    "            cell_width = max(self.cell.width_in_feature_size, min_cell_width) if relax_cell_width else self.cell.width_in_feature_size\n",
+    "            cell_height = max(self.cell.height_in_feature_size, min_cell_height) if relax_cell_height else self.cell.height_in_feature_size\n",
+    "            self.length_row = self.num_col * cell_width * self.tech['feature_size']\n",
+    "            self.length_col = self.num_row * cell_height * self.tech['feature_size']\n",
+    "        else:\n",
+    "            raise NotImplementedError(\"Only SRAM type is implemented in this version.\")\n",
+    "\n",
+    "        self.cap_row1 = self.length_row * 0.2e-15 / 1e-6\n",
+    "        self.cap_row2 = self.length_row * 0.2e-15 / 1e-6\n",
+    "        self.cap_col = self.length_col * 0.2e-15 / 1e-6\n",
+    "        self.res_row = self.length_row * self.unit_wire_res\n",
+    "        self.res_col = self.length_col * self.unit_wire_res\n",
+    "\n",
+    "        res_access = self.module_lib.calculate_on_resistance(\n",
+    "            self.cell.width_access_cmos * self.tech['feature_size'], 'NMOS',\n",
+    "            self.input_parameter['temperature'], self.tech\n",
+    "        )\n",
+    "        cap_access = self.module_lib.calculate_drain_cap(\n",
+    "            self.cell.width_access_cmos * self.tech['feature_size'], 'NMOS',\n",
+    "            self.cell.width_in_feature_size * self.tech['feature_size'], self.tech\n",
+    "        )\n",
+    "        self.cell.cap_sram_cell = (\n",
+    "            cap_access +\n",
+    "            self.module_lib.calculate_drain_cap(self.cell.width_sram_cell_nmos * self.tech['feature_size'], 'NMOS',\n",
+    "                                                self.cell.width_in_feature_size * self.tech['feature_size'], self.tech) +\n",
+    "            self.module_lib.calculate_drain_cap(self.cell.width_sram_cell_pmos * self.tech['feature_size'], 'PMOS',\n",
+    "                                                self.cell.width_in_feature_size * self.tech['feature_size'], self.tech) +\n",
+    "            self.module_lib.calculate_gate_cap(self.cell.width_sram_cell_nmos * self.tech['feature_size'], self.tech) +\n",
+    "            self.module_lib.calculate_gate_cap(self.cell.width_sram_cell_pmos * self.tech['feature_size'], self.tech)\n",
+    "        )\n",
+    "\n",
+    "        addr_bits = int(math.ceil(math.log2(self.num_row)))\n",
+    "        self.wl_decoder = self.module_lib.RowDecoder('REGULAR_ROW', addr_bits, False, False, self.tech, self.input_parameter)\n",
+    "        self.sense_amp = self.module_lib.SenseAmp(self.input_parameter, self.tech, self.cell)\n",
+    "        self.sram_write_driver = self.module_lib.WriteDriver(self.input_parameter, self.tech, self.cell)\n",
+    "        self.precharger = self.module_lib.Precharger(self.input_parameter, self.tech, self.cell)\n",
+    "\n",
+    "        self.initialized = True\n"
    ]
   }
  ],
